<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.android.smplqz.ResultActivity">

    <TextView
        android:id="@+id/txtGeneral"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/general_stats"
        android:textSize="20sp" />

    <com.github.lzyzsd.circleprogress.DonutProgress
        android:id="@+id/donutProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtGeneral" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBottom="@+id/donutProgress"
        android:layout_alignTop="@+id/donutProgress"
        android:layout_marginStart="14dp"
        android:layout_toEndOf="@+id/donutProgress"
        android:gravity="center_vertical">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attempts_done"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/fDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tFailed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attempts_failed"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/fFailed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tSkipped"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attempts_skipped"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/fSkipped"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textSize="18sp" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/txtDetailed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tableLayout"
        android:layout_centerHorizontal="true"
        android:text="@string/detailed_stats"
        android:textSize="20sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/txtDetailed"
        android:layout_marginTop="12dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_done"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/fieldDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textFailed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_failed"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/fieldFailed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textSkipped"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_skipped"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/fieldSkipped"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp" />
        </TableRow>
    </TableLayout>

</RelativeLayout>
